Added InputMessage for sending file and text messages Added InputMessageTemplateSelector that selects view depending on message type Added SendFile() Added CancelFile() Disabled animation for hamburger menu Fixed layouts for messages in ListView

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -314,11 +314,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WindowResources\ButtonEllipseStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="WindowResources\ButtonLoaderTemplate.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="WindowResources\ChatsDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowResources\InputMessageDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
