Added LastMessage  with 3 states:         if null then nothing is shown         if TextMessage then text and date are shown         if FileMessage  then icon, name of file without extn, date are shown IsWrting with 2 states:         if null then animation stops to work and is hidden         if not null then animation starts to work and is visible         (to turn off animation you must assign null to IsWriting property not empty string!)
ADDED INTO EditGroupViewModel
SearchMembersText  and SearchChanged- shows members whose name match SearchMembersText
SearchUsersText - searchs all users that matches SearchUsersText
SaveNameCommand  - saves new name of group (backend not implemented)

ADDED 2  defaut images
default user avatar
default chat avatar

DONT FORGET TO UPDATE Resources file in DEBUG folder because new images has been added

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -326,6 +326,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="WindowResources\LastMessageDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WindowResources\ListBoxUsersStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -469,6 +473,7 @@
     <Resource Include="files\avatar8.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\user.png" />
     <Resource Include="Resources\Extensions\bmp.png" />
     <Resource Include="Resources\Extensions\doc.png" />
     <Resource Include="Resources\Extensions\file.png" />
@@ -481,6 +486,9 @@
     <Content Include="files\Animals.wav" />
     <Content Include="files\control.wav" />
     <Content Include="files\justin-timberlake-cry-me-a-river.wav" />
+    <Resource Include="Resources\Extensions\png.png" />
+    <Resource Include="Resources\Extensions\jpg.png" />
+    <Resource Include="Resources\group.png" />
     <Content Include="Resources\Ringtons\alcatel_success.wav" />
     <Content Include="Resources\Ringtons\basic_whistle.wav" />
     <Content Include="Resources\Ringtons\doorslam.wav" />
