ADDED cancel and set photo buttons when mouseover the avatar icon in EditGroup CancelCommand - sets default avatar for group ChangeImageCommand - sets new avatar for group
When user leaves chat his messages becomes gray with image

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -473,6 +473,7 @@
     <Resource Include="files\avatar8.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\x.png" />
     <Resource Include="Resources\user.png" />
     <Resource Include="Resources\Extensions\bmp.png" />
     <Resource Include="Resources\Extensions\doc.png" />
