Added logo icon Changed colors for listview and ChatItem

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -36,6 +36,13 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup>
+    <Win32Resource>
+    </Win32Resource>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ControlzEx, Version=5.0.0.0, Culture=neutral, PublicKeyToken=69f1c32f803d307e, processorArchitecture=MSIL">
       <HintPath>..\packages\ControlzEx.5.0.0\lib\net462\ControlzEx.dll</HintPath>
@@ -499,7 +506,8 @@
     <Resource Include="Resources\Extensions\png.png" />
     <Resource Include="Resources\Extensions\jpg.png" />
     <Resource Include="Resources\group.png" />
-    <Resource Include="Resources\aaa.png" />
+    <Resource Include="Resources\logo.png" />
+    <Resource Include="logo.ico" />
     <Content Include="Resources\Ringtons\alcatel_success.wav" />
     <Content Include="Resources\Ringtons\basic_whistle.wav" />
     <Content Include="Resources\Ringtons\doorslam.wav" />
