ADDED Ability to change, turn on, turn off ringtons for ChatOne Ability to change, turn on, turn off ringtons for ChatGroup Ability to mute selected chat (if chat is muted no sound is played)
System Tray (if you want to disconnect from server write your code into ExitFromTray() method)

Notifications ChatOne, ChatGroup, TextMessage, FileMessage

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -161,6 +161,9 @@
     <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.31\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
     </Reference>
+    <Reference Include="Notifications.Wpf, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Notifications.Wpf.0.1.1\lib\net461\Notifications.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -170,6 +173,7 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -211,6 +215,9 @@
     <Compile Include="UserControls\LoginWarning.xaml.cs">
       <DependentUpon>LoginWarning.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\NotifyUC.xaml.cs">
+      <DependentUpon>NotifyUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\PasswordWarning.xaml.cs">
       <DependentUpon>PasswordWarning.xaml</DependentUpon>
     </Compile>
@@ -230,6 +237,7 @@
     <Compile Include="ViewModels\EntranceViewModel.cs" />
     <Compile Include="ViewModels\EditGroupViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\RingtonsViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="Views\CreateGroupUC.xaml.cs">
       <DependentUpon>CreateGroupUC.xaml</DependentUpon>
@@ -283,6 +291,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\LoginWarning.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\NotifyUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
