--- a/Client/App.config
+++ b/Client/App.config
@@ -7,8 +7,7 @@
 		<bindings>
 			<basicHttpBinding>
 				<binding name="BasicHttpBinding_Avatar" messageEncoding="Mtom" />
-				<binding name="fileBinding" sendTimeout="00:10:00" maxReceivedMessageSize="26214400"
-				 messageEncoding="Mtom" />
+				<binding name="fileBinding" sendTimeout="00:10:00" maxReceivedMessageSize="26214400" messageEncoding="Mtom" />
 			</basicHttpBinding>
 			<netTcpBinding>
 				<binding name="NetTcpBinding_Chat" />
@@ -16,18 +15,10 @@
 			</netTcpBinding>
 		</bindings>
 		<client>
-			<endpoint address="net.tcp://localhost:8302/Chat" binding="netTcpBinding"
-			 bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
-			 name="NetTcpBinding_Chat" />
-			<endpoint address="net.tcp://localhost:8302/Unit" binding="netTcpBinding"
-			 bindingConfiguration="NetTcpBinding_Unit" contract="ChatService.Unit"
-			 name="NetTcpBinding_Unit" />
-			<endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
-			 bindingConfiguration="fileBinding" contract="ChatService.File"
-			 name="fileBinding" />
-			<endpoint address="http://localhost:8301/Avatar" binding="basicHttpBinding"
-			 bindingConfiguration="fileBinding" contract="ChatService.Avatar"
-			 name="fileBinding" />
+			<endpoint address="net.tcp://localhost:8302/Chat" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat" name="NetTcpBinding_Chat" />
+			<endpoint address="net.tcp://localhost:8302/Unit" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_Unit" contract="ChatService.Unit" name="NetTcpBinding_Unit" />
+			<endpoint address="http://localhost:8301/File" binding="basicHttpBinding" bindingConfiguration="fileBinding" contract="ChatService.File" name="fileBinding" />
+			<endpoint address="http://localhost:8301/Avatar" binding="basicHttpBinding" bindingConfiguration="fileBinding" contract="ChatService.Avatar" name="fileBinding" />
 		</client>
 	</system.serviceModel>
 	<runtime>
