--- a/Client/packages.config
+++ b/Client/packages.config
@@ -7,5 +7,6 @@
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net471" />
   <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net471" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net471" />
+  <package id="Notifications.Wpf" version="0.1.1" targetFramework="net471" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net471" />
 </packages>
