--- a/letsTalk/ServiceWCF.csproj
+++ b/letsTalk/ServiceWCF.csproj
@@ -67,6 +67,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
